--- a/CuidooApp/Storyboards/Profile.storyboard
+++ b/CuidooApp/Storyboards/Profile.storyboard
@@ -9,7 +9,7 @@
         <!--Profile View Controller-->
         <scene sceneID="xo8-8s-doP">
             <objects>
-                <tableViewController id="JiP-1q-4rA" customClass="profileViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="JiP-1q-4rA" customClass="ProfileViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="2de-F7-a0u">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,7 +30,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gia-7B-cbH">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mom" translatesAutoresizingMaskIntoConstraints="NO" id="gia-7B-cbH">
                                                     <rect key="frame" x="142" y="28" width="130" height="129"/>
                                                     <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <constraints>
@@ -203,6 +203,9 @@
                                                 <constraint firstItem="1YU-Qe-bBA" firstAttribute="leading" secondItem="OJM-m0-IJJ" secondAttribute="trailing" constant="15" id="iWx-1L-NRK"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="AOA-fx-0Rt" kind="show" id="uyr-kM-UzL"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -212,6 +215,9 @@
                             <outlet property="delegate" destination="JiP-1q-4rA" id="Vwm-sc-0iu"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="profilePic" destination="gia-7B-cbH" id="0zA-JR-bjN"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vx7-WO-Rfq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -247,10 +253,21 @@
             </objects>
             <point key="canvasLocation" x="351" y="-47"/>
         </scene>
+        <!--Config-->
+        <scene sceneID="XXm-Ga-WMl">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Config" id="AOA-fx-0Rt" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="3RW-rJ-IL3"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aif-dq-nGL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="361" y="62"/>
+        </scene>
     </scenes>
     <resources>
         <image name="doc.text.magnifyingglass" catalog="system" width="58" height="64"/>
         <image name="gear" catalog="system" width="64" height="58"/>
+        <image name="mom" width="842" height="782"/>
         <image name="person.fill" catalog="system" width="64" height="60"/>
         <image name="questionmark.circle" catalog="system" width="64" height="60"/>
     </resources>
