--- a/CuidooApp/Storyboards/Profile.storyboard
+++ b/CuidooApp/Storyboards/Profile.storyboard
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Profile View Controller-->
+        <!--Nome-->
         <scene sceneID="xo8-8s-doP">
             <objects>
                 <tableViewController id="JiP-1q-4rA" customClass="ProfileViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -24,8 +24,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="235"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACm-t6-ugi">
-                                                    <rect key="frame" x="20" y="183" width="374" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACm-t6-ugi">
+                                                    <rect key="frame" x="20" y="183" width="374" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -215,8 +215,10 @@
                             <outlet property="delegate" destination="JiP-1q-4rA" id="Vwm-sc-0iu"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Nome" id="CaU-hK-MLo"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="profilePic" destination="gia-7B-cbH" id="0zA-JR-bjN"/>
+                        <outlet property="profilePicMomImageView" destination="gia-7B-cbH" id="0zA-JR-bjN"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vx7-WO-Rfq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
