--- a/CuidooApp/Storyboards/Search.storyboard
+++ b/CuidooApp/Storyboards/Search.storyboard
@@ -36,6 +36,9 @@
                                                 <integer key="value" value="20"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <segue destination="68C-0S-Vgb" kind="modal" modalPresentationStyle="fullScreen" id="Umq-bW-bnM"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forma de pagamento" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgS-UQ-EXU">
                                         <rect key="frame" x="18" y="13.5" width="163.5" height="20.5"/>
@@ -93,6 +96,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bf7-9c-vls" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-219" y="885"/>
+        </scene>
+        <!--Request-->
+        <scene sceneID="kyQ-EM-2pv">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Request" id="68C-0S-Vgb" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="tqM-GJ-Xxl"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OzP-xx-E3s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-301" y="1024"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mSN-Xx-Oge">
